# vdl

./: .coverage  .gitignore  LICENSE  README.md  install-mac.sh  install-windows.ps1  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/vdl/: __init__.py  __main__.py  cli.py  config.py  downloader.py  history.py  i18n.py  interactive.py  music.py  presets.py  progress.py  search.py  tui.py  updater.py
tests/: test_batch.py  test_cli.py  test_config.py  test_downloader.py  test_history.py  test_interactive.py  test_music.py  test_presets.py  test_progress.py  test_search.py  test_updater.py
