[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vdl"
version = "0.1.0"
description = "Téléchargeur universel de vidéos — CLI multi-sites basé sur yt-dlp"
requires-python = ">=3.9"
dependencies = ["yt-dlp"]

[project.scripts]
vdl = "vdl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
