[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vdl"
version = "0.1.0"
description = "Téléchargeur universel de vidéos — CLI multi-sites basé sur yt-dlp"
requires-python = ">=3.9"
dependencies = ["yt-dlp>=2024.01.01"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
vdl = "vdl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
